<resources>
    <string name="app_name">Credit Collector for owners</string>
    <string name="action_settings">Settings</string>
    <string name="Button">Submit</string>
    <string name="Firs_Name">Firs Name</string>
    <string name="Full_Name">Full Name</string>
    <string name="User_Name">User Name</string>
    <string name="Pass">Password</string>
    <string name="Last_Name">Last Name</string>
    <string name="NIC_Number">NIC Number</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Date">Date (YYYY/MM/DD)</string>
    <string name="LG_BT">Login</string>
    <string name="Add1">Address 01</string>
    <string name="Add2">Address 02</string>
    <string name="Add3">Address 03</string>
    <string name="lone_crt">Create Lone</string>
    <string name="keep">Keep Me Logged In</string>
    <string name="collect">Collect</string>
    <string name="reg">Register</string>
    <string name="title_activity_loging">LogingActivity</string>
    <string name="title_activity_find">FindActivity</string>
    <string name="todo">TODO</string>
    <string name="Loan_num">Loan Number</string>
    <string name="SRCH">Search</string>
    <string name="tm">Terms</string>
    <string name="per_tm">Per Term</string>
    <string name="LC">Location</string>
    <string name="DT">Date</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Crt_loan">Do you Want to create a Loan</string>
    <string name="nikname">Nik Name</string>
    <string name="LA">Loan Amount</string>
    <string name="LD">Loding....</string>
    <string name="RS">Rs.</string>
    <string name="rate">Loan Rate %</string>
    <string name="LP">Loan Piriod</string>
    <string name="months">Months</string>
    <string name="terms">Terms</string>
    <string name="full">Full</string>
    <string name="payed">Paied</string>
    <string name="payment">Payment</string>
    <string name="available">Available</string>
    <string name="cal">Calculate</string>
    <string name="backslash">/</string>
    <string name="LNL">Loan Number List</string>
    <string name="CL">Collection List</string>
    <string name="YO">Your Offices</string>
    <string name="MV">Map View</string>
    <string name="INFO">Information</string>
    <string name="CuL">Customer List</string>
    <string name="APT">Amount Per Term </string>
    <string name="NOT">Number Of Terms </string>
    <string name="CT">Collaction Type </string>
    <string name="RN">Root Number </string>
    <string name="conform">Conform </string>
    <string name="reject">Reject </string>
    <string name="total">Total </string>
    <string name="Due">Due </string>
    <string name="loan">Loan </string>
    <string name="collaction">Collaction </string>
    <string name="L_info">Loan Info </string>
    <string name="avalability">Available Workers</string>
    <string name="finish_LN">Finish Loan </string>
    <string name="finish_LNL">Finished Loan List</string>
    <string name="active_LN">Active Loan </string>
    <string name="finish">Finish </string>
    <string name="ok">OK </string>
    <string name="ONW">Online Workers </string>
    <string name="STdate">Start Date </string>
    <string name="CL_info">Collaction Info </string>
    <string name="CL_map">Collaction Map </string>
    <string name="title_activity_collaction_map">Map</string>
    <string name="title_activity_maps44444">Map</string>
    <string name="title_activity_one_map">Map</string>


</resources>
