<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/ic_action_name_online01"
        android:contentDescription="@string/YO" />

    <ImageView
        android:id="@+id/online"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignEnd="@+id/imageView4"
        android:layout_alignRight="@+id/imageView4"
        android:layout_alignTop="@+id/imageView4"
        android:contentDescription="@string/CL" />

    <TextView
        android:id="@+id/online_root"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView4"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/imageView4"
        android:layout_toRightOf="@+id/imageView4"
        android:text="@string/LD"
        android:textSize="20sp" />
</RelativeLayout>