<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.modifica.creditcollectorapp.Registation">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar_01"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/reg"
            android:textColor="@color/font"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="57dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:ems="18"
            android:hint="@string/NIC_Number"
            android:maxLength="10"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:textSize="17sp">

        </EditText>

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_below="@+id/editText2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:ems="18"
            android:hint="@string/Firs_Name"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_below="@+id/editText1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:ems="18"
            android:hint="@string/Last_Name"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_below="@+id/nik_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:ems="18"
            android:hint="@string/Add1"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_below="@+id/editText4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:ems="18"
            android:hint="@string/Add2"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_below="@+id/editText5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:ems="18"
            android:hint="@string/Add3"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_below="@+id/editText6"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:ems="18"
            android:hint="@string/Phone_Number"
            android:inputType="number"
            android:maxLength="10"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/editText8"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_below="@+id/editText7"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:ems="18"
            android:gravity="fill"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:hint="@string/Date"
            android:textSize="17sp" />


        <EditText
            android:id="@+id/nik_name"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_below="@+id/editText3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:ems="18"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:hint="@string/nikname"
            android:textSize="17sp" />


        <EditText
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_alignLeft="@+id/editText8"
            android:layout_alignStart="@+id/editText8"
            android:layout_below="@+id/editText8"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:textSize="17sp"
            android:inputType="text"
            android:ems="13"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:hint="@string/LC" />


        <ImageButton
            android:id="@+id/imageButton_LC"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignTop="@+id/location"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/LC"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/location"
            android:layout_toRightOf="@+id/location"
            android:background="@drawable/rcbutton"
            app:srcCompat="@android:drawable/ic_menu_mylocation" />


    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_below="@+id/location"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rcbutton"
        android:text="@string/Button"
        android:textColor="@color/font"
        android:layout_marginBottom="50dp"
        android:textAllCaps="false"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:textSize="17sp"
        android:ems="18"/>


    </RelativeLayout>

        </ScrollView>

</RelativeLayout>
