<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_loging2"
    tools:context="com.modifica.creditcollectorapp.Loan_info">


    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:ems="18"
        android:background="@drawable/rcbutton"
        android:textColor="@color/font"
        android:textSize="17sp"
        android:layout_marginBottom="150dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/finish_LN"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_alignTop="@+id/button7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/rcbutton"
        android:ems="18"
        android:text="@string/active_LN"
        android:textAllCaps="false"
        android:textColor="@color/font"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:textSize="17sp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button8"
        android:layout_marginTop="5dp"
        android:ems="18"
        android:background="@drawable/rcbutton"
        android:textColor="@color/font"
        android:textSize="17sp"
        android:text="@string/L_info"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:textAllCaps="false"/>

</RelativeLayout>
